--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul class="nav-list">
         <li><a class="nav-item" href="#">Home</a></li>
         <li><a class="nav-item" href="#destinations">See & Do</a></li>
-        <li><a class="nav-item" href="#cultures">Culture</a></li>
+        <li><a class="nav-item" href="#places">Culture</a></li>
         <li><a class="nav-item" href="#hotels">Stay</a></li>
         <li><a class="nav-item" href="booking.html">Plan Your Trip</a></li>
         <li><a class="nav-item" href="#contact">Contact US</a></li>
@@ -54,19 +54,19 @@
     </div>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="./images/slide1.png" alt="" />
+        <img class="img-baner" src="./images/slide1.png" alt="" />
       </div>
       <div class="swiper-slide">
-        <img src="./images/slide2.jpg" alt="" />
+        <img class="img-baner" src="./images/slide2.jpg" alt="" />
       </div>
       <div class="swiper-slide">
-        <img src="./images/slide3.jpg" alt="" />
+        <img class="img-baner" src="./images/slide3.jpg" alt="" />
       </div>
       <div class="swiper-slide">
-        <img src="./images/slide4.jpg" alt="" />
+        <img class="img-baner" src="./images/slide4.jpg" alt="" />
       </div>
       <div class="swiper-slide">
-        <img src="./images/slide5.jpg" alt="" />
+        <img class="img-baner" src="./images/slide5.jpg" alt="" />
       </div>
     </div>
     <div style="z-index: 99">
@@ -118,96 +118,8 @@
       <i class="desc">Explore Indonesia from Sabang to Merauke
       </i>
     </div>
-    <div class="row" id="culture">
-      <div class="card-culture">
-        <img src="./images/tumpaksewu.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Tumpak Sewu Waterfall</h1>
-          <small>Tumpak Sewu Waterfall is a tiered waterfall that is located between the Pronojiwo District, Lumajang Regency.</small>
-          <a href="https://en.wikipedia.org/wiki/Tumpak_Sewu_Waterfalls">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/comodo_island.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Komodo Island</h1>
-          <small>Komodo Island is an island located in the Nusa Tenggara Islands, which is separated by the Sape Strait.</small>
-          <a href="https://ich.unesco.org/en/USL/saman-dance-00509">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/monas.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>National Monument</h1>
-          <small>National Monument is a 132 m obelisk in the centre of Merdeka Square, Central Jakarta. </small>
-          <a href="https://en.wikipedia.org/wiki/National_Monument_(Indonesia)">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/waerebo.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Waerebo Village</h1>
-          <small>The traditional village of Wae Rebo in the district of Manggarai on the island of Flores, East Nusatenggara.</small>
-          <a href="https://en.wikivoyage.org/wiki/Wae_Rebo">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/jayawijaya.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Jayawijaya Mountain</h1>
-          <small>The Jayawiya Mountain is a mountain range east of Maoke in the central highlands region of the Indonesian.</small>
-          <a href="https://en.wikipedia.org/wiki/Jayawijaya_Mountains">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/toba.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Lake Toba</h1>
-          <small>Lake Toba is 100 kilometers long, 30 kilometers wide and 508 meters deep. The lake is located in the middle of the northern part of the island of Sumatra</small>
-          <a href="https://en.wikipedia.org/wiki/Lake_Toba">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/raja4.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Raja Ampat</h1>
-          <small>is an archipelago located off the northwest tip of Bird's Head Peninsula on the island of New Guinea, in Indonesia's Southwest Papua province.</small>
-          <a href="https://en.wikipedia.org/wiki/Lake_Toba">Learn more...</a>
-        </div>
-      </div>
-      <div class="card-culture">
-        <img src="./images/mandalika.jpg" alt="" class="culture-img">
-        <div class="culture-caption">
-          <h1>Mandalika</h1>
-          <small>The Mandalika International Circuit is a racing circuit located in the Mandalika Special Economic Zone in Central Lombok, West Nusa Tenggara.</small>
-          <a href="https://themandalikagp.com/home">Learn more...</a>
-        </div>
-      </div>
+    <div class="row" id="place">
     </div>
-  </section>
-  <section class="swiper swiperCulture">
-    <div class="title-section">
-      <h1 class="fs-2">
-        Popular Hotel in
-        <span style="display: block">INDONESIA</span>
-      </h1>
-      <i class="desc">Explore Indonesia from Sabang to Merauke
-      </i>
-    </div>
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
   </section>
   <footer class="footer-distributed" id="contact">
     <div class="footer-left">
@@ -236,6 +148,7 @@
   <script src="./assets/js/swiper-bundle.min.js"></script>
   <!-- Custom JS -->
   <script src="./assets/js/script.js"></script>
+  <script type="module"></script>
 </body>
 
 </html>
