--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
       </i>
     </div>
     <div class="row" id="place">
+      <!-- here is content destinations load using javascript -->
+      <img style="width: 80px;" src="./images/loading.gif" alt="">
     </div>
   </section>
   <footer class="footer-distributed" id="contact">
@@ -148,7 +150,6 @@
   <script src="./assets/js/swiper-bundle.min.js"></script>
   <!-- Custom JS -->
   <script src="./assets/js/script.js"></script>
-  <script type="module"></script>
 </body>
 
 </html>
