--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <div class="row" id="place">
       <!-- here is content destinations load using javascript -->
       <img style="width: 80px;" src="./images/loading.gif" alt="">
+      <p style="color: white;">Fetching data...</p>
     </div>
   </section>
   <footer class="footer-distributed" id="contact">
