--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card-img" src="./images/bali.jpg" alt="">
+        <img class="card-img" src="./images/destinations/bali.jpg" alt="">
         <div class="card-caption">
           <h1>Bali Island</h1>
           <small>Bali is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller neighbouring islands, notably Nusa Penida, Nusa Lembongan, and Nusa Ceningan to the southeast.</small>
@@ -124,6 +124,88 @@
       <p style="color: white;">Fetching data...</p>
     </div>
   </section>
+  <section id="hotels">
+    <div class="title-section">
+      <h1 class="fs-2">
+        Most Popular Hotel
+      </h1>
+      <i class="desc">Find the best hotel for your trip
+      </i>
+    </div>
+    <div class="swiper-hotel listHotel">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide slide-hotel">
+          <img src="./images/hotels/Four Seasons Resort Bali.jpg" alt="" class="place-img">
+          <div class="card-caption text-white">
+            <h3>Four Seasons Resort Bali</h3>
+            <p>Hotel | Bali</p>
+            <div class="rate-hotel">
+              <h3>Start IDR 1,5M</h3>
+              <button type="button" class="btn btn-white">Booked Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide slide-hotel">
+          <img src="./images/hotels/The Langham Jakarta.jpg" alt="" class="place-img">
+          <div class="card-caption text-white">
+            <h3>The Langham Jakarta</h3>
+            <p>Hotel | Jakarta</p>
+            <div class="rate-hotel">
+              <h3>Start IDR 750K</h3>
+              <button type="button" class="btn btn-white">Booked Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide slide-hotel">
+          <img src="./images/hotels/Raffles Jakarta.jpg" alt="" class="place-img">
+          <div class="card-caption text-white">
+            <h3>Raffles Jakarta</h3>
+            <p>Hotel | Jakarta</p>
+            <div class="rate-hotel">
+              <h3>Start IDR 900K</h3>
+              <button type="button" class="btn btn-white">Booked Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide slide-hotel">
+          <img src="./images/hotels/Nihi Sumba.jpg" alt="" class="place-img">
+          <div class="card-caption text-white">
+            <h3>Nihi Sumba</h3>
+            <p>Hotel | Sumba</p>
+            <div class="rate-hotel">
+              <h3>Start IDR 900K</h3>
+              <button type="button" class="btn btn-white">Booked Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide slide-hotel">
+          <img src="./images/hotels/Banyan Tree Bintan.jpg" alt="" class="place-img">
+          <div class="card-caption text-white">
+            <h3>Banyan Tree Bintan</h3>
+            <p>Hotel | Bintan</p>
+            <div class="rate-hotel">
+              <h3>Start IDR 1M</h3>
+              <button type="button" class="btn btn-white">Booked Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide slide-hotel">
+          <img src="./images/hotels/AYANA Komodo Resort.jpg" alt="" class="place-img">
+          <div class="card-caption text-white">
+            <h3>AYANA Komodo Resort</h3>
+            <p>Hotel | Labuan Bajo</p>
+            <div class="rate-hotel">
+              <h3>Start IDR 1,3M</h3>
+              <button type="button" class="btn btn-white">Booked Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="display:flex;justify-content: center;">
+      <button class="btn btn-secondary text-white" style="display: block; text-align: center;" type="button"><a class="text-white" href="hotels.html">See more</a></button>
+    </div>
+  </section>
   <footer class="footer-distributed" id="contact">
     <div class="footer-left">
       <h3>Indonesia Tourism</span></h3>
@@ -136,6 +218,8 @@
         <a href="#"><i class="bi bi-twitter"></i></a>
         <a href="#"><i class="bi bi-youtube"></i></a>
         <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-github"></i></a>
       </div>
     </div>
     <div class="footer-right">
