--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a class="nav-item" href="#">Home</a></li>
         <li><a class="nav-item" href="#destinations">See & Do</a></li>
         <li><a class="nav-item" href="#places">Culture</a></li>
-        <li><a class="nav-item" href="#hotels">Stay</a></li>
+        <li><a class="nav-item" href="hotels.html">Stay</a></li>
         <li><a class="nav-item" href="booking.html">Plan Your Trip</a></li>
         <li><a class="nav-item" href="#contact">Contact US</a></li>
       </ul>
@@ -54,13 +54,13 @@
     </div>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img class="img-baner" src="./images/slide1.png" alt="" />
+        <img class="img-baner" src="./images/slide3.jpg" alt="" />
       </div>
       <div class="swiper-slide">
         <img class="img-baner" src="./images/slide2.jpg" alt="" />
       </div>
       <div class="swiper-slide">
-        <img class="img-baner" src="./images/slide3.jpg" alt="" />
+        <img class="img-baner" src="./images/slide1.png" alt="" />
       </div>
       <div class="swiper-slide">
         <img class="img-baner" src="./images/slide4.jpg" alt="" />
