--- a/hotels.html
+++ b/hotels.html
@@ -1,91 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>List Hotel | Indonesia Tourism</title>
-        <!-- Link Swiper's CSS -->
-        <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <!-- Favicon image -->
-        <link
-            rel="shortcut icon"
-            href="https://upload.wikimedia.org/wikipedia/commons/c/cd/Logo_Pesona_Indonesia_%28Kementerian_Pariwisata%29.png"
-            type="image/x-icon"
-        />
-        <!-- Icon Bootstrap -->
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css"
-        />
-    </head>
-    <body>
-        <!-- loader -->
-        <div class="loader">
-            <img src="./images/loader.gif" style="width: 150px" />
-        </div>
-        <!-- end loader -->
-        <header class="header">
-            <nav class="navbar">
-                <div class="logo">
-                    <img
-                        class="logo-img"
-                        src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Logo_Pesona_Indonesia_%28Kementerian_Pariwisata%29.png"
-                        width="150"
-                        alt=""
-                    />
-                    <div id="menu" onclick="toggleMenu()">
-                        <i class="bi bi-list"></i>
-                    </div>
-                </div>
-                <ul class="nav-list">
-                    <li><a class="nav-item" href="index.html">Home</a></li>
-                    <li>
-                        <a class="nav-item" href="#destinations">See & Do</a>
-                    </li>
-                    <li><a class="nav-item" href="#places">Culture</a></li>
-                    <li><a class="nav-item" href="#hotels">Stay</a></li>
-                    <li>
-                        <a class="nav-item" href="booking.html"
-                            >Plan Your Trip</a
-                        >
-                    </li>
-                    <li><a class="nav-item" href="#contact">Contact US</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section class="swiper">
-            <div class="welcome">
-                <h1>Pick Your Homestay</h1>
-                <a href="#explore" class="btn-explore">Plan Trip</a>
-            </div>
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img
-                        class="img-baner"
-                        src="./images/baner-hotel.jpg"
-                        alt=""
-                    />
-                </div>
-            </div>
-        </section>
-        <section id="hotels">
-            <div class="title-section">
-                <h1 class="fs-2">
-                    Choose Your <span style="display: block">HOTEL</span>
-                </h1>
-            </div>
-            <div class="row" id="listHotel">
-                <!-- here is content hotels load using javascript -->
-                <img style="width: 80px" src="./images/loading.gif" alt="" />
-                <p">Fetching data...</p>
-            </div>
-        </section>
-        <!-- Swiper JS -->
-        <script src="./assets/js/swiper-bundle.min.js"></script>
-        <!-- Custom JS -->
-        <script src="./assets/js/script.js"></script>
-    </body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>List Hotel | Indonesia Tourism</title>
+	<!-- Link Swiper's CSS -->
+	<link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="./assets/css/style.css" />
+	<!-- Favicon image -->
+	<link rel="shortcut icon"
+		href="https://upload.wikimedia.org/wikipedia/commons/c/cd/Logo_Pesona_Indonesia_%28Kementerian_Pariwisata%29.png"
+		type="image/x-icon" />
+	<!-- Icon Bootstrap -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css" />
+</head>
+
+<body>
+	<!-- loader -->
+	<div class="loader">
+		<img src="./images/loader.gif" style="width: 150px" />
+	</div>
+	<!-- end loader -->
+	<header class="header">
+		<nav class="navbar">
+			<div class="logo">
+				<img class="logo-img"
+					src="https://upload.wikimedia.org/wikipedia/commons/c/cd/Logo_Pesona_Indonesia_%28Kementerian_Pariwisata%29.png"
+					width="150" alt="" />
+				<div id="menu" onclick="toggleMenu()">
+					<i class="bi bi-list"></i>
+				</div>
+			</div>
+			<ul class="nav-list">
+				<li><a class="nav-item" href="index.html">Home</a></li>
+				<li>
+					<a class="nav-item" href="#destinations">See & Do</a>
+				</li>
+				<li><a class="nav-item" href="#places">Culture</a></li>
+				<li><a class="nav-item" href="#hotels">Stay</a></li>
+				<li>
+					<a class="nav-item" href="booking.html">Plan Your Trip</a>
+				</li>
+				<li><a class="nav-item" href="#contact">Contact US</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section class="swiper">
+		<div class="welcome">
+			<h1>Pick Your Homestay</h1>
+			<a href="#explore" class="btn-explore">Plan Trip</a>
+		</div>
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+				<img class="img-baner" src="./images/baner-hotel.jpg" alt="" />
+			</div>
+		</div>
+	</section>
+	<section id="hotels">
+		<div class="title-section">
+			<h1 class="fs-2 text-white">
+				Choose Your <span style="display: block">Home Stay</span>
+			</h1>
+		</div>
+		<div class="row" id="listHotel">
+			<!-- here is content hotels load using javascript -->
+			<img style="width: 80px" src="./images/loading.gif" alt="" />
+			<p">Fetching data...</p>
+		</div>
+	</section>
+	<footer class="footer-distributed" id="contact">
+		<div class="footer-left">
+			<h3>Indonesia Tourism</span></h3>
+			<p class="footer-name">Wonderfull Indonesia © 2022</p>
+			<p class="footer-name">Created with <i class="bi bi-heart-fill"></i> by <a target="_blank"
+					href="https://instagram.com/angkrnia">Angga Kurnia</a>
+			</p>
+			<div class="footer-icons">
+				<a href="#"><i class="bi bi-facebook"></i></a>
+				<a href="#"><i class="bi bi-twitter"></i></a>
+				<a href="#"><i class="bi bi-youtube"></i></a>
+				<a href="#"><i class="bi bi-instagram"></i></a>
+				<a href="#"><i class="bi bi-linkedin"></i></a>
+				<a href="#"><i class="bi bi-github"></i></a>
+			</div>
+		</div>
+		<div class="footer-right">
+			<p>Contact Us</p>
+			<form action="#" method="get">
+				<input type="text" name="email" placeholder="Email">
+				<textarea name="message" placeholder="Message"></textarea>
+				<button>Send</button>
+			</form>
+		</div>
+	</footer>
+	<!-- Swiper JS -->
+	<script src="./assets/js/swiper-bundle.min.js"></script>
+	<!-- Custom JS -->
+	<script src="./assets/js/script.js"></script>
+	<script>
+		fetchData(
+			'https://raw.githubusercontent.com/angkrnia/projek_uas_pemrograman_web/master/utils/hotels.json'
+		).then((response) => {
+			const hotel = document.getElementById('listHotel');
+			let dataHotel = '';
+			response.forEach((data) => {
+				dataHotel += `
+						<div class="card-place" style="display:flex;align-items:center;flex-direction:column">
+								<img src="./images/hotels/${data.image}" class="place-img">
+								<h3>${data.name}</h3>
+								<p>Hotel | ${data.location}</p>
+								<div class="rate-hotel">
+									<h3>Start IDR ${data.rate}</h3>
+									<button type="button" class="btn btn-secondary">Booked Now</button>
+								</div>
+							</div>
+						`;
+			});
+			hotel.innerHTML = dataHotel;
+		});
+	</script>
+</body>
+
 </html>
