--- a/hotels.html
+++ b/hotels.html
@@ -37,12 +37,10 @@
 			<ul class="nav-list">
 				<li><a class="nav-item" href="index.html">Home</a></li>
 				<li>
-					<a class="nav-item" href="#destinations">See & Do</a>
+					<a class="nav-item" href="#listdatahotel">See & Do</a>
 				</li>
-				<li><a class="nav-item" href="#places">Culture</a></li>
-				<li><a class="nav-item" href="#hotels">Stay</a></li>
 				<li>
-					<a class="nav-item" href="booking.html">Plan Your Trip</a>
+					<a class="nav-item" href="bookings.html">Plan Your Trip</a>
 				</li>
 				<li><a class="nav-item" href="#contact">Contact US</a></li>
 			</ul>
