--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <ul class="nav-list">
         <li><a class="nav-item" href="#">Home</a></li>
         <li><a class="nav-item" href="#destinations">See & Do</a></li>
-        <li><a class="nav-item" href="#places">Culture</a></li>
+        <li><a class="nav-item" href="#kebudayaan">Culture</a></li>
         <li><a class="nav-item" href="hotels.html">Stay</a></li>
-        <li><a class="nav-item" href="booking.html">Plan Your Trip</a></li>
+        <li><a class="nav-item" href="bookings.html">Plan Your Trip</a></li>
         <li><a class="nav-item" href="#contact">Contact US</a></li>
       </ul>
     </nav>
@@ -82,12 +82,14 @@
       </h1>
       <span>This place amazes with its fabulous atmosphere and nature</span>
     </div>
-    <div class="row" >
+    <div class="row">
       <div class="card">
         <img class="card-img" src="./images/slide3.jpg" alt="">
         <div class="card-caption">
           <h1>Bromo Mountain</h1>
-          <small>The Bromo, or Mount Bromo 7,641 ft it is not the highest peak of the massif, but the most famous. The area is one of the most visited tourist destinations in East Java, and the volcano is included in the Bromo Tengger Semeru National Park.</small>
+          <small>The Bromo, or Mount Bromo 7,641 ft it is not the highest peak of the massif, but the most famous. The
+            area is one of the most visited tourist destinations in East Java, and the volcano is included in the Bromo
+            Tengger Semeru National Park.</small>
           <a class="link-white" href="https://en.wikipedia.org/wiki/Mount_Bromo">Learn more...</a>
         </div>
       </div>
@@ -95,7 +97,9 @@
         <img class="card-img" src="./images/slide4.jpg" alt="">
         <div class="card-caption">
           <h1>Borobudur Temple</h1>
-          <small>Borobudur, also transcribed Barabudur is a 9th-century Mahayana Buddhist temple in Magelang Regency. It is the world's largest Buddhist temple. The temple consists of nine stacked platforms, six square and three circular, topped by a central dome.</small>
+          <small>Borobudur, also transcribed Barabudur is a 9th-century Mahayana Buddhist temple in Magelang Regency. It
+            is the world's largest Buddhist temple. The temple consists of nine stacked platforms, six square and three
+            circular, topped by a central dome.</small>
           <a class="link-white" href="https://whc.unesco.org/en/list/592/">Learn more...</a>
         </div>
       </div>
@@ -103,7 +107,9 @@
         <img class="card-img" src="./images/destinations/bali.jpg" alt="">
         <div class="card-caption">
           <h1>Bali Island</h1>
-          <small>Bali is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller neighbouring islands, notably Nusa Penida, Nusa Lembongan, and Nusa Ceningan to the southeast.</small>
+          <small>Bali is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west
+            of Lombok, the province includes the island of Bali and a few smaller neighbouring islands, notably Nusa
+            Penida, Nusa Lembongan, and Nusa Ceningan to the southeast.</small>
           <a class="link-white" href="https://whc.unesco.org/en/list/592/">Learn more...</a>
         </div>
       </div>
@@ -127,7 +133,7 @@
   <section id="hotels">
     <div class="title-section">
       <h1 class="fs-2">
-        Most Popular Hotel
+        Most Favorite Hotel
       </h1>
       <i class="desc">Find the best hotel for your trip
       </i>
@@ -203,7 +209,62 @@
       </div>
     </div>
     <div style="display:flex;justify-content: center;">
-      <button class="btn btn-secondary text-white" style="display: block; text-align: center;" type="button"><a class="text-white" href="hotels.html">See more</a></button>
+      <button class="btn btn-secondary text-white" style="display: block; text-align: center;" type="button"><a
+          class="text-white" href="hotels.html">See more</a></button>
+    </div>
+  </section>
+  <section id="kebudayaan">
+    <div class="culture">
+      <div class="title-section">
+        <h1 class="fs-2 text-white">
+          Indonesian Culture
+        </h1>
+        <i class="desc text-white">Indonesia is a country with a variety of cultures
+        </i>
+      </div>
+      <div class="culture-item">
+        <img class="shadow" src="./images/cultures/wayang.jpg" alt="">
+        <div class="culture-desc">
+          <h1>Wayang Kulit</h1>
+          <p>Wayang kulit is a traditional form of Indonesian puppetry that is performed using shadow puppets. The
+            puppets are made of thin leather, and the performances are accompanied by music and the narrator's
+            storytelling. The stories told in wayang kulit performances are often based on Hindu mythology and epics,
+            such as the Ramayana and the Mahabharata. In wayang kulit performances, the puppeteer, or dalang,
+            manipulates the puppets from behind a white screen, and the shadows of the puppets are projected onto the
+            screen for the audience to see. Wayang kulit is a popular form of entertainment in Indonesia and has also
+            gained recognition internationally as a unique and important part of Indonesian culture.</p>
+        </div>
+      </div>
+      <div class="culture-item">
+        <div class="culture-desc">
+          <h3>Kecak Dance</h3>
+          <p>The Kecak dance is a traditional Balinese dance that is also known as the "Monkey Dance." It is a form of
+            storytelling through dance and music, and is typically performed by a group of men seated in a circle. The
+            dance is characterized by the repetitive chanting of the word "cak," which creates a rhythmic sound that is
+            accompanied by hand gestures and body movement.</p>
+        </div>
+        <img class="shadow" src="./images/cultures/tarikecak.jpg" alt="">
+      </div>
+      <div class="culture-item">
+        <img class="shadow" src="./images/cultures/saman.jpg" alt="">
+        <div class="culture-desc">
+          <h3>Saman Dance</h3>
+          <p>The Saman dance, also known as the "Saman Gayo Lues," is a traditional dance from the Gayo Lues region of
+            Aceh, Indonesia. It is a group dance performed by men and is characterized by fast, rhythmic movements and
+            intricate hand gestures. The dance is accompanied by music played on traditional instruments, including the
+            rebab (a two-stringed bowed instrument) and the gendang (a drum).</p>
+        </div>
+      </div>
+      <div class="culture-item">
+        <div class="culture-desc">
+          <h3 style="right: 0;">Ngaben Ceremony</h3>
+          <p>The ngaben ceremony is a complex and elaborate event that involves the participation of the entire
+            community. It begins with the preparation of the body, which is typically dressed in traditional clothing
+            and adorned with flowers. The body is then placed in a coffin, which is carried by a procession of family
+            members and friends to the cremation site.</p>
+        </div>
+        <img class="shadow" src="./images/cultures/ngaben.jpg" alt="">
+      </div>
     </div>
   </section>
   <footer class="footer-distributed" id="contact">
