--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </div>
     <div class="swiper-hotel listHotel">
       <div class="swiper-wrapper">
-        <div class="swiper-slide slide-hotel">
+        <div class="swiper-slide slide-hotel shadow">
           <img src="./images/hotels/Four Seasons Resort Bali.jpg" alt="" class="place-img">
           <div class="card-caption text-white">
             <h3>Four Seasons Resort Bali</h3>
@@ -151,7 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide slide-hotel">
+        <div class="swiper-slide slide-hotel shadow">
           <img src="./images/hotels/The Langham Jakarta.jpg" alt="" class="place-img">
           <div class="card-caption text-white">
             <h3>The Langham Jakarta</h3>
@@ -162,7 +162,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide slide-hotel">
+        <div class="swiper-slide slide-hotel shadow">
           <img src="./images/hotels/Raffles Jakarta.jpg" alt="" class="place-img">
           <div class="card-caption text-white">
             <h3>Raffles Jakarta</h3>
@@ -173,7 +173,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide slide-hotel">
+        <div class="swiper-slide slide-hotel shadow">
           <img src="./images/hotels/Nihi Sumba.jpg" alt="" class="place-img">
           <div class="card-caption text-white">
             <h3>Nihi Sumba</h3>
@@ -184,7 +184,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide slide-hotel">
+        <div class="swiper-slide slide-hotel shadow">
           <img src="./images/hotels/Banyan Tree Bintan.jpg" alt="" class="place-img">
           <div class="card-caption text-white">
             <h3>Banyan Tree Bintan</h3>
@@ -195,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide slide-hotel">
+        <div class="swiper-slide slide-hotel shadow">
           <img src="./images/hotels/AYANA Komodo Resort.jpg" alt="" class="place-img">
           <div class="card-caption text-white">
             <h3>AYANA Komodo Resort</h3>
