--- a/hotels.html
+++ b/hotels.html
@@ -49,7 +49,6 @@
 	<section class="swiper">
 		<div class="welcome">
 			<h1>Pick Your Homestay</h1>
-			<a href="#explore" class="btn-explore">Plan Trip</a>
 		</div>
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
@@ -117,7 +116,7 @@
 									<i class="bi bi-star-fill"></i>
 									<i class="bi bi-star-fill"></i>
 									<i class="bi bi-star-half"></i>
-									<button type="button" class="btn btn-secondary">Booked Now</button>
+									<button type="button" class="btn btn-secondary"><a style="color:white" href="bookings.html">Booked Now</a></button>
 								</div>
 							</div>
 						`;
